# GDG_APL_FastCache

./: README.md  project.md  pyproject.toml
fastcache/: README.md  pyproject.toml
fastcache/examples/: app.py  basic_usage.py  dashboard_demo.py
fastcache/fastcache/: __init__.py  cache.py  config.py  exceptions.py  models.py
fastcache/fastcache/dashboard/: __init__.py  app.py  index.html
fastcache/fastcache/embedders/: __init__.py  base.py  gemini.py  openai.py
fastcache/fastcache/guardrails/: __init__.py  base.py  builtin.py
fastcache/fastcache/stores/: __init__.py  base.py  memory.py  redis_store.py
fastcache/tests/: test_cache.py
